k8s/nginx-demo-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-demo-lb
spec:
  type: LoadBalancer
  selector:
    app: nginx-demo
  ports:
    - port: 8080
      targetPort: 80
